<resources>
    <string name="app_name">TransformerApp</string>
    <string name="date_title_text">Operaciones de Fecha</string>
    <string name="select_date">Seleccionar Fecha</string>
    <string name="day_of_the_week">Día del mes</string>
    <string name="week_of_the_year">Semana del año</string>
    <string name="timestamp">TimeStamp Long</string>
    <string name="first_format">Formato DD/MM/YYYY</string>
    <string name="second_format">Formato DD - MM - YYYY</string>
    <string name="third_format">Formato EEE, MMM d, yyyy</string>
    <string name="fourth_format">Formato EEEE d</string>
</resources>